--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "web-vitals": "^2.1.4",
     "axios": "^0.26.1"
   },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
