--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
